--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
-title: Hello, world! I'm David Freeman
+title: Yıldız Medya
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Yıldız Medya konyadaki gözünüz.
 permalink: ':title/'
 baseurl: "https://nr42test.github.io" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
+author: Nihat Yıldız # add your name
 author-img: david-freeman.jpg # add your photo
 about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
 twitter: # add your Twitter handle
